 - Added the "static" qualifier where missing.
 - Bound "Copy link location".
 - Bound preliminar find text support.
 - Added line numbers and enabled wrapping in the "View Source" window.
 - Added HTTP-1.1's chunked transfer support!
 - Made the stop button sensitive when loading an image.
 - Added more statics in dpi, const in pixmaps, and removed redundant includes.
   Patches: place
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
 - Added an experimental gzip decoder! 
 - Implemented "Load Images" in the page menu and cleaned up html.hh.
 - Added shortcuts: PgDn=Spc PgUp=b Back=BackSpace|, Forw=Shift+Backspace|.
 - Made a cleanup in cache's parse header code.
   Patch: place, Jorge Arellano Cid
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano Cid, higuita
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano Cid
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
 - Made "New browser window" inherit the panel style of its parent.
 - Made TopGroup a PackedGroup, simplifying UI code and removing workarounds.
 - Added a redraw(DAMAGE_HIGHLIGHT) call to Back, Forw and Stop buttons.
   Patches: Johannes Hofmann
+- Made progress bars resize automatically.
   Patches: Johannes Hofmann, Jorge Arellano Cid
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts
+- Bound Ctrl-R to reload.